# NoteBook_FFmpegLearning

./: .gitignore  README.md  音视频基础知识.md
Doc/: 01_音视频基础知识.md  02_FFmpeg概览.md  04_FFmpeg之音视频同步.md  05_FFmpeg重新封装.md  06_FFmpeg转码.md
Doc/00_FFmpeg概览/: 01_音视频基础知识.md  02_FFmpeg概览.md  03_FFmpeg库.md  04_FFmpeg之音视频同步.md  05_FFmpeg重新封装.md  06_FFmpeg转码.md
Doc/00_音视频基础知识/: 01_音视频基础知识.md  02_音频编码基础.md
Doc/01_FFmpeg使用/: 00_Mac下通过FFmpeg采集音频.md  01_音频编码.md  01_音频编码基础.md  02_Mac下通过FFmpeg进行音频重采样.md  03_Mac下通过FFmpeg创建AAC编码器.md  04_视频基础知识.md  05_Mac下通过FFmpeg生成YUV.md  06_H264基础知识.md  07_Mac下通过FFmpeg进行编解码.md  08_RTMP网络协议与FLV格式.md  09_RTMP推流.md  10_流媒体服务器.md
LibFFmpegUsingExample/: 02_Transcoding.cpp  CMakeLists.txt  HelloWorld.cpp
LibFFmpegUsingExample/Src/00_libav_tutoria/: 01_Remuxing.cpp  02_Transcoding.cpp  video_debugging.cpp  video_debugging.h
LibFFmpegUsingExample/Src/01_FFmpegUsingExample/: 00_FFmpegWithAudioBaseMac.c  00_ViewController.swift  01_FFmpegWithAudioBaseMac.c  01_FFmpegWithAudioBaseMac.h  02_FFmpegCodecAACBaseMac.c  02_FFmpegCodecAACBaseMac.h  03_FFmpegReadYUMBaseMac.c  04_FFmpegReadNV12ToYum420BaseMac.c  04_FFmpegReadNV12ToYum420BaseMac.h  05_PushStream.c  05_PushStream.h
other/: FFmpegInstallFileList.md  FFmpeg工具,md  FFmpeg工具安装.md  myDesktop2.mkv
